# MATH-458

./: .gitignore  .gitmodules  README.md  copy.sh
code_snippets/: CMakeLists.txt  hello.cpp  readme.md
exercises/book_exercises/ch1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
exercises/book_exercises/ch1/src/: e11.cpp  e12.cpp
exercises/book_exercises/ch2/: CMakeCache.txt  CMakeLists.txt  Makefile
exercises/book_exercises/ch2/src/: e22.cpp  e23.cpp  e24.cpp  e26  e26.cpp
exercises/book_exercises/ch4/: CMakeLists.txt
exercises/book_exercises/ch4/src/: ex41.cpp  ex42.cpp  ex43  ex43.cpp
exercises/class_exercises/eigen_exo/: CMakeCache.txt  CMakeLists.txt  Makefile
exercises/class_exercises/eigen_exo/src/: ex1.cpp  ex2.cpp
